test/cli/test/deleting-pod-by-name/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: deleting-pod-by-name
  isDeletingPolicy: true
  resources:
  - test/test-nginx-1
  result: pass
  rule: ""
- kind: Pod
  policy: deleting-pod-by-name
  isDeletingPolicy: true
  resources:
  - test/test-nginx-2
  result: fail
  rule: ""
